# XCSP3-Rust-Parser

./: .rustfmt.toml  Cargo.toml  README.md  build.rs
instances/: AllInterval-009.xml  Allergy.xml  Bibd-sc-22-033-12-08-04.xml  CoveringArray-3-06-2-11.xml  Crossword-lex-h0502.xml  Crossword-ogd2008-vg-4-4.xml  Crossword-uk-h0505.xml  Crossword-uk-p01.xml  DiamondFree-007.xml  Dubois-015.xml  GracefulGraph-K02-P04.xml  Hanoi-03.xml  Knapsack-50-200-01.xml  Ortholatin-003.xml  PrizeCollecting-15-3-5-3.xml  Sat-flat200-00-clause.xml  Subisomorphism-g05-g18.xml  Subisomorphism-si2-r001-m200-04.xml  Subisomorphism-si4-r001-m200-05.xml  Tpp-3-3-20-1.xml  TravellingSalesman-100-50-16.xml  TravellingSalesman-25-30-00.xml  TravellingSalesman-50-30-05.xml  Wwtpp-jok-ex02380.xml  my-example.xml  radi_X2.xml
instances/tests/: c_basic_clause.xml  c_binpacking.xml  c_comparisaon_alldiff.xml  c_comparisaon_lex.xml  c_connection_channel.xml  c_connection_element.xml  c_count_sum.xml  c_cumulative.xml  c_generic_extension.xml  c_generic_intension.xml  c_packing_binpacking.xml  c_packing_knapsack.xml  c_slide.xml  o_minimize.xml
src/: example_callback.rs  lib.rs  main.rs  xcsp_callback.rs  xcsp_runner.rs
src/constraints/: mod.rs  xall_different.rs  xall_different_except.rs  xall_different_list.rs  xall_different_matrix.rs  xall_equal.rs  xbinpacking.rs  xcardinality.rs  xchannel.rs  xcircuit.rs  xclause.rs  xconstraint_set.rs  xconstraint_trait.rs  xconstraint_type.rs  xcount.rs  xcumulative.rs  xelement.rs  xelement_matrix.rs  xextension.rs  (+19 more)
tests/: integration_test.rs  main.rs
(+41 files in other folders)
